<resources>
    <string name="app_name_main">Siaga COVID-19</string>
    <string name="app_name_alt">Siaga COVID-19 (Dev)</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->

    <!-- Label-mates -->
    <string name="region_indonesia">Indonesia</string>
    <string name="learn_more_covid19">Get to know more</string>
    <string name="back_to_overview">Back to overview</string>
    <string name="lookup">Look up</string>
    <string name="hotline">Hotline</string>
    <string name="world_stats">World Statistics</string>
    <string name="lookup_description">See details by province all over Indonesia</string>
    <string name="hotline_description">Check emergency phone number to contact</string>
    <string name="world_stats_description">Seek and view COVID-19 cases statistics around the world</string>
    <string name="lookup_icon">Look up icon</string>
    <string name="hotline_icon">Hotline icon</string>
    <string name="world_stats_icon">World statistics icon</string>
    <string name="about_icon">About this app</string>
    <string name="goto_lookup">Goto lookup</string>
    <string name="goto_hotline">Goto hotline</string>
    <string name="goto_world_stats">Goto world stats</string>
    <string name="related_information">Related information</string>
    <string name="last_updated">Last updated: ???</string>

    <!-- Data labels -->
    <string name="total_cases">Total cases</string>
    <string name="confirmed">Confirmed</string>
    <string name="positive">Positive</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="death">Death</string>
    <string name="total">Total</string>

    <string name="active_case">Active Cases</string>
    <string name="daily_confirmed_case">Daily Confirmed Case</string>
    <string name="daily_active_case">Daily Active Case</string>
    <string name="daily_recovered_case">Daily Recovered Case</string>
    <string name="daily_death_case">Daily Death Case</string>

    <!-- Lookup -->
    <string name="search_icon_description">Search</string>
    <string name="region_search_hint">Wilayah</string>
    <string name="clear_search">Clear search</string>
    <string name="data_source_info">Fetching source data…</string>

    <!-- Hot-line -->
    <string name="hotline_advanced_description">Layanan darurat via telepon yang disediakan oleh Kemkes dan juga Pemprov DKI Jakarta</string>
    <string name="hotline_contact_logo">Hotline contact logo</string>
    <string name="call_to_hotline">Call to hotline contact</string>
    <string name="close_hotline_dialog">Close hotline dialog</string>

    <!-- Worldwide statistics -->
    <string name="worldwide_stats">Worldwide Statistics</string>

    <!-- About App -->
    <string name="copyright">Copyright © 2020–2021</string>
    <string name="author">Created by @akmalrusli363 as part of COVID-19 mitigation in Indonesia.</string>
    <string name="part_of">Powered by BNCC x GoAcademy</string>
    <string name="bncc_x_goacademy">BNCC x GoAcademy</string>
    <string name="version">Version %s (public-api + kawalcorona)</string>
    <string name="jetpack_version">Jetpack Version</string>

    <!-- Misc -->
    <string name="bottom_sheet_grapple">Bottom sheet swipe to expand</string>
    <string name="corona_vector">Coronavirus vector</string>
    <string name="reload_data">Reload Data</string>
    <string name="unknown">\???</string>
    <string name="loading">…</string>
    <string name="data_provided_url">Data provided from <a href="https://data.covid19.go.id/public/index.html">data.covid19.go.id</a></string>

    <!-- 3M Tips for COVID19 Preventions -->
    <string name="tips_3m">Ayo jaga dirimu dengan 3M!</string>
    <string name="tips_3m_physical_distancing">Menjaga Jarak</string>
    <string name="tips_3m_hand_wash">Mencuci Tangan</string>
    <string name="tips_3m_wear_mask">Mengenakan Masker</string>
    <string name="covid19_prevention_suggestions">Ayo #dirumahAja selagi anda tidak bepergian untuk kepentingan sangat mendesak</string>

    <!-- Vaccination -->
    <string name="vaccination">Vaccination</string>
    <string name="vaccination_description">Learn more about COVID-19 vaccination in Indonesia</string>
    <string name="national_vaccination_data">National Vaccination Data</string>
    <string name="vaccination_group">Vaccination Group</string>
    <string name="vaccination_target">Vaccination Target</string>
    <string name="vaccination_target_total">Number of Participants</string>

    <string name="first_dose">First dose</string>
    <string name="second_dose">Second dose</string>

    <string name="medical">Tenaga Medis</string>
    <string name="public_service">Petugas Publik</string>
    <string name="elders">Lansia</string>
    <string name="general_public">Masyarakat Umum</string>
    <string name="general_teenagers">Kelompok 12–17 Tahun</string>

    <string name="vaccination_data_provider_info">Vaccination data are provided from <a href="https://vaksin.kemkes.go.id/">vaksin.kemkes.go.id</a>
        through supported vaccination API (cekdiri.id).
        \n\nData updates/changes may occur at any time.
    </string>

    <string-array name="sortLookup">
        <item>Positive Cases</item>
        <item>Recovered Cases</item>
        <item>Death Cases</item>
        <item>Daily Positive Cases</item>
        <item>Daily Recovered Cases</item>
        <item>Daily Death Cases</item>
    </string-array>

    <string name="title_home">Home</string>
    <string name="title_covid_case">COVID-19 Cases</string>
    <string name="bottom_title_covid_case">COVID-19 Cases</string>
    <string name="title_vaccination_and_test">Vaccine &amp; Test</string>
    <string name="bottom_title_vaccination">Vaccine</string>
    <string name="title_covid_testing">COVID-19 Testing</string>
    <string name="bottom_title_covid_testing">Testing</string>
    <string name="title_covid_detail_overview">COVID-19 Overview</string>

    <string name="see_details">See details</string>

    <string name="pcr_tcm_test">PCR + TCM</string>
    <string name="antigen_test">Antigen</string>
    <string name="people_tested">People Tested</string>
    <string name="test_samples">Samples</string>
    <string name="first_dose">First Dose</string>
    <string name="second_dose">Full Vaccinated</string>

    <string name="heading_total_case">Total Cases</string>
    <string name="heading_vaccination">Vaccination</string>
    <string name="heading_testing_and_tracing">Testing &amp; Tracing</string>
    <string name="heading_tracing_overview">Testing &amp; Tracing Overview</string>

    <string name="chart_vaccination_overview">Vaccination Overview</string>
    <string name="chart_daily_vaccination">Daily Vaccination</string>
</resources>
