<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetHotline"
    style="@style/AppBottomSheetStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".hotline.HotlineBottomDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <ImageButton
            android:id="@+id/ivReturnIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:background="@drawable/btn_haptic_image"
            android:contentDescription="@string/close_hotline_dialog"
            android:scaleType="fitXY"
            android:src="@drawable/ic_close"
            app:tint="@color/colorAccentLight" />

        <LinearLayout
            android:id="@+id/llHotlineDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="24dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivReturnIcon">

            <TextView
                android:id="@+id/tvHotlineTitle"
                style="@style/h4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotline"
                android:textColor="@color/colorAccentLight" />

            <TextView
                android:id="@+id/tvHotlineContactName"
                style="@style/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hotline_advanced_description" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbFetchHotline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="visible" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHotline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:visibility="gone"
            tools:listitem="@layout/item_hotline" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
